--- a/conf/base.config
+++ b/conf/base.config
@@ -1,3 +1,40 @@
-# base.config
+// base.config
 
-# This file is intentionally left blank.
+// Base configuration settings
+process {
+    // Default resource requirements
+    cpus = 1
+    memory = 2.GB
+    time = '1h'
+
+    // Container settings
+    container = null
+    
+    withLabel: process_low {
+        cpus = 2
+        memory = 4.GB
+    }
+
+    withLabel: process_medium {
+        cpus = 4
+        memory = 8.GB
+    }
+
+    withLabel: process_high {
+        cpus = 8
+        memory = 16.GB
+    }
+}
+
+// Execution profiles
+profiles {
+    docker {
+        docker.enabled = true
+        docker.runOptions = '--rm'
+    }
+    
+    singularity {
+        singularity.enabled = true
+        singularity.autoMounts = true
+    }
+}
